--- a/messager/auth_app/templates/auth_app/sign-in.html
+++ b/messager/auth_app/templates/auth_app/sign-in.html
@@ -17,6 +17,7 @@
         </h1>
         <div class="container">
             <img class="logo" src="{% static 'auth_app/img/logo.png' %}" width="150">
+            <img class="text-logo" src="{% static 'auth_app/img/text-logo.png' %}" width="210">
             <div class="block">
                 <h2 class="title">
                     Войти с помощью 
