--- a/messager/frontend/static/frontend/css/style.css
+++ b/messager/frontend/static/frontend/css/style.css
@@ -98,12 +98,13 @@ font-display: swap;
 }
 
 :root {
-    --color-theme: #008080;
-    --color-theme-light: #07a6a6;
-    --color-theme-dark: #055f5f;
+    --color-theme: #aaaca1;
+    --color-theme-light: #7d8686;
+    --color-theme-dark: #4d5354;
     --outline-color: rgba(0, 0, 255, 0.564);
     --border-radius: 10px;
-    --font-color: #696969;
+    --font-color: rgb(96, 98, 89);
+    --btn-hover-outline: rgb(245, 245, 145);
     --gap: 20px;
 }
 * {
@@ -147,8 +148,8 @@ h1, h2, h3, h4, h5, p {
 
 .header {
     padding: var(--gap) 0;
-    border-bottom: 1px solid var(--color-theme-light);
-    box-shadow: 0 1px 1px var(--color-theme-light);
+    /* border-bottom: 1px solid var(--color-theme-light);
+    box-shadow: 0 1px 1px var(--color-theme-light); */
 }
 
 .container {
@@ -167,25 +168,43 @@ h1, h2, h3, h4, h5, p {
     display: flex;
     flex-direction: row;
     align-items: center;
+    gap: var(--gap);
+}
+
+.flex-column {
+    display: flex;
+    flex-direction: column;
+    align-items: self-start;
+    gap: var(--gap);
 }
 
 .flex-row-sp-between {
     justify-content: space-between;
 }
 
+.margin-bottom-none {
+    margin-bottom: 0 !important;
+}
+
 .btn {
     display: block;
     padding: 10px;
-    background-color: var(--color-theme);
-    color: white;
-    transition: background-color, 0.2s ease-in-out;
+    background-image: url("../img/texture-btn.jpg");
+    background-size: cover;
+    border-radius: var(--border-radius);
+    color: var(--font-color);
     cursor: pointer;
     width: min-content;
+    outline-color: transparent;
+    outline-style: solid;
+    outline-width: 2px;
+    outline-offset: 2px;
+    transition: all 0.2s ease-in-out;
 }
 
 .btn:hover {
-    background-color: var(--color-theme-light);
-    transition: background-color, 0.2s ease-in-out;
+    outline-color: var(--font-color);
+    transition: all 0.2s ease-in-out;
 }
 
 .btn:focus-visible {
@@ -194,18 +213,33 @@ h1, h2, h3, h4, h5, p {
 }
 
 .btn:active {
-    background-color: var(--color-theme-dark);
+    filter: grayscale(80%);
 }
 
 .link {
+    position: relative;
     padding: 10px;
     cursor: pointer;
     transition: color 0.2s ease-in-out;
+    border-radius: var(--border-radius);
 }
 
-.link:hover {
-    color: var(--color-theme-light);
-    transition: color 0.2s ease-in-out;
+.link::after {
+    content: '';
+    display: block;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 2px;
+    background-color: black;
+    transform: scaleX(0);
+    transition: transform 0.2s ease-in-out;
+}
+
+.link:hover::after {
+    transform: scaleX(1);
+    transition: transform 0.2s ease-in-out;
 }
 
 .link:focus-visible {
@@ -214,11 +248,13 @@ h1, h2, h3, h4, h5, p {
 }
 
 .link:active {
-    color: var(--color-theme-dark);
+    color: black;
 }
 
 .img-min {
-    width: 50px;
+    width: 72px;
+    height: 39px;
+    border-radius: 10px;
 }
 
 .title-h2 {
@@ -254,6 +290,7 @@ h1, h2, h3, h4, h5, p {
     padding: 10px;
     min-width: 100px;
     border: 1px solid var(--color-theme);
+    border-radius: var(--border-radius);
     width: 100%;
 }
 
@@ -273,6 +310,65 @@ h1, h2, h3, h4, h5, p {
     gap: var(--gap);
 }
 
+.nav__item {
+    position: relative;
+}
+
 .header__block {
     gap: var(--gap);
+}
+
+.base-list {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    height: 400px;
+    padding: 13px 5px;
+    overflow-y: scroll;
+}
+
+.base-list__item {
+    width: 98%;
+}
+
+.base-list__item:not(:last-child) {
+    margin-bottom: var(--gap);
+}
+
+
+.base-list__link {
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    gap: var(--gap);
+    padding: var(--gap);
+    border-radius: var(--border-radius);
+    background-size: cover;
+    background-repeat: no-repeat;
+    cursor: pointer;
+    outline-color: transparent;
+    outline-style: solid;
+    outline-width: 2px;
+    outline-offset: 2px;
+    transition: outline-color 0.2s ease-in-out;
+}
+
+.base-list__link:hover {
+    outline-color: var(--font-color);
+    transition: outline-color 0.2s ease-in-out;
+}
+
+.base-list__link:focus-visible {
+    outline: none;
+    outline: 5px solid var(--outline-color);
+    outline-offset: -4px;
+}
+
+.base-list__link:active {
+    color: white;
+}
+
+.base-list__link:active img {
+    filter: grayscale(80%);
 }
