--- a/messager/frontend/static/frontend/css/users.css
+++ b/messager/frontend/static/frontend/css/users.css
@@ -16,44 +16,8 @@
     height: min-content;
 }
 
-.users-list {
-    display: flex;
-    flex-direction: column;
-    height: 400px;
-    overflow-y: scroll;
-    width: 100%;
-}
-
-.users-list__item:not(:last-child) {
-    margin-bottom: var(--gap);
-}
-
-.users-article-wrap {
-    padding: var(--gap);
-    border: 1px solid var(--color-theme);
-    display: flex;
-    align-items: center;
-    gap: var(--gap);
-    cursor: pointer;
-    background-color: transparent;
-    transition: all 0.2s ease-in-out;
-}
-
-.users-article-wrap:hover {
-    background-color: var(--color-theme-light);
-    color: white;
-    transition: all 0.2s ease-in-out;
-}
-
-.users-article-wrap:focus-visible {
-    outline: none;
-    outline: 5px solid var(--outline-color);
-    outline-offset: -4px;
-}
-
-.users-article-wrap:active {
-    background-color: var(--color-theme-dark);
-    color: white;
+.users-list__link {
+    background-image: url("../img/bg-user-card.jpg");
 }
 
 .users-article__img {
