add remmember section

--- a/messager/auth_app/templates/auth_app/sign-in-callback.html
+++ b/messager/auth_app/templates/auth_app/sign-in-callback.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Ok!</title>
 </head>
-<body>
-    <h1>Ok!</h1>
+<body style="width: 100%; height: 300px; display: flex; justify-content: center; align-items: center;">
+    <h1 style="color: green;">Ok!</h1>
 <script>
     window.location.replace("/")
 </script>
