--- a/messager/frontend/static/frontend/css/users.css
+++ b/messager/frontend/static/frontend/css/users.css
@@ -17,6 +17,8 @@
 }
 
 .users-list__link {
+    flex-direction: row;
+    align-items: center;
     background-image: url("../img/bg-user-card.jpg");
 }
 
